syntax = "proto3";

package io.harness.pms.contracts.triggers;

option java_multiple_files = true;

import "product/ci/scm/proto/scm.proto";

message TriggerPayload {
  ParsedPayload parsedPayload = 2;
  Type type = 3;
  map<string, string> headers = 4;
  SourceType sourceType = 5;
}

message ParsedPayload {
  oneof payload {
    product.ci.scm.proto.PullRequestHook pr = 1;
    product.ci.scm.proto.PushHook push = 2;
  }
}

enum Type {
  CUSTOM = 0;
  GIT = 1;
  SCHEDULED = 2;
  WEBHOOK = 3;
  ARTIFACT = 4;
  MANIFEST = 5;
}

enum SourceType {
  CUSTOM_REPO = 0;
  GITHUB_REPO = 1;
  GITLAB_REPO = 2;
  BITBUCKET_REPO = 3;
  AWS_CODECOMMIT_REPO = 4;
}
